--- a/lesson7/src/main/resources/templates/new-product.html
+++ b/lesson7/src/main/resources/templates/new-product.html
@@ -7,7 +7,7 @@
 <body>
 
 <div th:insert="~{menu :: #nav-menu}"></div>
-<p><a th:href=@{/newTest}>Add 20 new random products</a></p>
+<p><a th:href=@{/new/newTest}>Add 20 new random products</a></p>
 <form th:action="@{/new}" th:object="${product}" method="post">
     <table border="1">
         <tr>
