--- a/lesson7/src/main/resources/templates/product.html
+++ b/lesson7/src/main/resources/templates/product.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
+<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml" xmlns:sec="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
     <title>Products</title>
@@ -22,20 +22,7 @@
         <td th:text="${product.price}">10.22</td>
     </tr>
 </table>
-
-<form  th:object="${product}" method="post">
-    <table border="1">
-        <tr>
-            <td>New title </td>
-            <td><input type="text" th:field="*{title}"/> </td>
-        </tr>
-        <tr>
-            <td>New price </td>
-            <td><input th:field="*{price}" type="number"/></td>
-        </tr>
-    </table>
-    <button type="submit">Save</button>
-</form>
+<div sec:authorize="hasAnyAuthority('ADMIN', 'MANAGER')"><a th:href="${product.id + '/update'}">Update</a></div>
 
 </body>
 </html>
